tests/vertical-slice/reject/let_destructure_wrong_record_name.hew
// Validation (PR #2003): a record let-destructuring pattern whose written type
// name (`Other`) differs from the RHS product type (`Point`) must be rejected,
// even when the two records share an identical field shape. Before the fix the
// checker admitted this as an irrefutable destructure and silently lowered the
// projection as `Point.x`, so the written `Other` constructor was never
// enforced. Exactly one spanned error must fire, naming both types.
type Point { x: i64; }
type Other { x: i64; }

fn main() -> i64 {
    let Other { x } = Point { x: 41 };
    return x;
}
